2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: sprinkled more const qualifiers.

	* app/paint-funcs/scale-region.c: call the progress callback less
	often.

2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.c: moved hiding the dialog from 
	gimp_transform_tool_real_transform() to gimp_transform_tool_doit().
	Delay undrawing the preview in doit() until the transformation is
	done. This removes the annoying flicker at the end.

2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_real_transform):
	hide the tool dialog before starting to perform the transformation.

2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: also use PixelSurround for the
	linear interpolation. Sprinkled some const qualifiers.

2008-08-26  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/gimpmodule.c:
	Don't set tp_new for PyGimpTile_Type and PyGimpPixelRgn_Type as both
	don't have init functions.

2008-08-26  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/pygimp-tile.c
	(pf_init): Ensure that the python drawables gimp drawable is set.
	(pf_dealloc): Don't crash if the pixel fetchers init function failed.

2008-08-26  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: updated documentation.

2008-08-26  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c: further simplified the code path
	that is executed when a brush is scaled up. We don't need to scale
	in several steps here.

2008-08-26  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c: removed some unused parameters
	from the code that is used for brush scaling. Added sanity checks.

2008-08-26  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpwidgets.c

	* plug-ins/common/file-xbm.c
	* plug-ins/common/file-wmf.c
	* plug-ins/common/file-svg.c
	* plug-ins/common/file-gih.c
	* plug-ins/common/blur-motion.c
	* plug-ins/file-jpeg/jpeg-save.c